Fix header and glyph settings alignment

--- a/_includes/layout/header.liquid
+++ b/_includes/layout/header.liquid
@@ -1,11 +1,11 @@
 <header>
     <nav id="navbar" class="navbar fixed-top navbar-dark bg-convrtr shadow-sm">
-        <div class="container-fluid mw justify-content-end">
+        <div class="container-fluid mw justify-content-start">
             <a href="{% if data.environment == 'development' %}http://localhost:8088/{% else %}{{ pkg.homepage }}{% endif %}" 
                class="navbar-brand text-white mb-0 h1 fw-light me-auto me-md-3" title="Home">
                 {% if data.environment == 'development' %}<i class="bi bi-braces-asterisk"></i> {% endif %}{{ pkg.sitename }}
             </a>
-            <div class="d-flex">
+            <div class="d-flex ms-auto">
                 <span class="navbar-text text-white mx-0 mx-md-3 fs-5">
                     {{ pkg.tagline }}
                 </span>
