--- a/_includes/partials/misc/covenant.liquid
+++ b/_includes/partials/misc/covenant.liquid
@@ -64,13 +64,17 @@
                         </div>
                     </div>
                     <div class="card-footer py-3">
-                        <div class="d-flex justify-content-start align-items-center">
-                            <button role="button" class="btn btn-md btn-convrtr" id="generateCovenantImage" title="Create an image from Covenant glyphs">Create image</button>
-                            <div class="form-check form-switch mx-2">
-                                <input class="form-check-input" type="checkbox" role="switch" id="covImageTransparency" aria-checked="false">
-                                <label class="form-check-label" for="covImageTransparency">Transparent background <span class="visually-hidden">for Covenant image</span></label>
+                        <div class="row row-cols-2 g-md-0 gx-0 gy-2">
+                            <div class="col col-12 col-md-auto me-2 mb-2">
+                                <button role="button" class="btn btn-md btn-convrtr" id="generateCovenantImage" title="Create an image from Covenant glyphs">Create image</button>
                             </div>
-                            {% include "components/select-copy-dl" %}
+                            <div class="col d-flex flex-fill">
+                                <div class="form-check form-switch mx-2">
+                                    <input class="form-check-input" type="checkbox" role="switch" id="covImageTransparency" aria-checked="false">
+                                    <label class="form-check-label" for="covImageTransparency">Transparent background <span class="visually-hidden">for Covenant image</span></label>
+                                </div>
+                                {% include "components/select-copy-dl" %}
+                            </div>
                         </div>
                         <hr />
                         <div id="covenantResults" class="data-to-copy active"></div>
