--- a/_includes/partials/home/tools.liquid
+++ b/_includes/partials/home/tools.liquid
@@ -30,7 +30,7 @@
                                 <div class="col col-12 col-md-auto">
                                     <div class="input-group w-auto">
                                         <label class="input-group-text" for="textToolsSelect">Delimiter</label>
-                                        <select class="form-select" id="textToolsSelect" aria-label="Text tools selector">
+                                        <select class="form-select" id="textToolsSelect" autocomplete="off">
                                             <option value="stripspaces" selected="">Strip spaces</option>
                                             <option value="reverse">Reverse</option>
                                             <option value="uppercase">Uppercase</option>
