Improved styling of frequencies
Added better grid support for frequencies, with additional grid styling and the ability to independently set a minimum column width

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -414,6 +414,17 @@ textarea {
     }
 }
 
+.grid {
+    &--fill {
+        --bs-column-fill: 6rem;
+        grid-template-columns: repeat(auto-fill, minmax(var(--bs-column-fill), 1fr));
+    }
+    &--fit {
+        --bs-column-fit: 6rem;
+        grid-template-columns: repeat(auto-fill, minmax(var(--bs-column-fit), 1fr));
+    }
+}
+
 code {
     color: rgba(var(--bs-dark-rgb), var(--bs-text-opacity)) !important;
     background-color: rgba(var(--bs-success-rgb), var(--bs-bg-opacity)) !important;
