Add navigation link
Had to change ID to prevent conflicts

--- a/_includes/partials/hex/frequencies.liquid
+++ b/_includes/partials/hex/frequencies.liquid
@@ -1,5 +1,5 @@
 {% assign hexDelimiter = "hexFrequencies" %}
-<section id="freq" class="section">
+<section id="hexFreq" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
             <a class="d-flex justify-content-between section-toggle text-decoration-none"
