--- a/_includes/layout/nav.liquid
+++ b/_includes/layout/nav.liquid
@@ -13,7 +13,7 @@
             {% endfor %}
         </ul>
         {% else %}
-        <a class="nav-link dropdown-toggle" href="../{{ link.id }}" role="button">
+        <a class="nav-link" href="../{{ link.id }}" role="button">
             <span class="d-inline-flex ms-1 me-auto">{{ link.label }}</span>
         </a>
         {% endif %}
