Add chaocipher partial and hook up to the tools
Also fixed some text strings in other partials and removed lettersOnly from firing on the decode

--- a/_includes/partials/ciphers/beaufort.liquid
+++ b/_includes/partials/ciphers/beaufort.liquid
@@ -34,7 +34,7 @@
                 <div class="card">
                     <span class="card-label visually-hidden">Beaufort cipher</span>
                     <div class="card-body text-center">
-                        <textarea placeholder="Example: TEST SENTENCE → WORD [key] → DKZK WNQDKEBS" title="beaufort string" rows="6" id="beaufortText" class="form-control beaufort-cipher" autocomplete="off"></textarea>
+                        <textarea placeholder="Example: TEST SENTENCE → WORD [key] → DKZK WNQDKEBS" title="Beaufort string" rows="6" id="beaufortText" class="form-control beaufort-cipher" autocomplete="off"></textarea>
                     </div>
                     <div class="card-footer py-3">
                         <div class="text-center mb-4 g-0">
