Update keyword description and example

--- a/_includes/partials/ciphers/keyword.liquid
+++ b/_includes/partials/ciphers/keyword.liquid
@@ -13,7 +13,9 @@
             </a>
             <hr>
             <p class="px-2">
-                Similar to the Vigenère cipher (the decryption process is the same), except you start with a reversed alphabet. For example: <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">SENTENCE</code> encrypted with a key of <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">TEST</code> would shift like: 
+                Similar to the Vigenère cipher (the decryption process is the same), except you start with a reversed alphabet. For example: 
+                <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">TEST SENTENCE</code> encrypted with a key of <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">WORD</code> would shift like: 
+                <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">DKZK WNQDKEBS</code> 
             </p>
         </div>
         <div class="collapse" id="keywordCollapse">
