Update and improve placeholders and examples

--- a/_includes/partials/ciphers/chaos.liquid
+++ b/_includes/partials/ciphers/chaos.liquid
@@ -28,7 +28,7 @@
                 <div class="card">
                     <span class="card-label visually-hidden">Chaocipher</span>
                     <div class="card-body text-center">
-                        <textarea placeholder="Example: HELLO WORLD → WAHQZIUETS" title="Encrypt of decrypt Chaocipher string" rows="6" id="chaosText" class="form-control chaos-text" autocomplete="off"></textarea>
+                        <textarea placeholder="Example: HELLO WORLD → WAHQZIUETS" title="Encrypt or decrypt Chaocipher string" rows="6" id="chaosText" class="form-control chaos-text" autocomplete="off"></textarea>
                     </div>
                     <div class="card-footer py-3">
                         <div class="d-flex justify-content-start align-items-center">
