--- a/_includes/partials/ciphers/rail.liquid
+++ b/_includes/partials/ciphers/rail.liquid
@@ -39,7 +39,7 @@
                 <div class="card">
                     <span class="card-label visually-hidden">Rail fence cipher</span>
                     <div class="card-body text-center">
-                        <textarea placeholder="Example: HELLO WORLD → HOLELWRDLO" title="rail string" rows="6" id="railText" class="form-control rail-cipher" autocomplete="off"></textarea>
+                        <textarea placeholder="Example: HELLO WORLD → HOLELWRDLO" title="Encrypt / Decrypt Rail fence string" rows="6" id="railText" class="form-control rail-cipher" autocomplete="off"></textarea>
                     </div>
                     <div class="card-footer py-3">
                         <div class="text-center mb-4 g-0">
