--- a/_includes/partials/ciphers/keyword.liquid
+++ b/_includes/partials/ciphers/keyword.liquid
@@ -23,7 +23,7 @@
                 <div class="card">
                     <span class="card-label visually-hidden">Keyword cipher</span>
                     <div class="card-body text-center">
-                        <textarea placeholder="Example: TEST SENTENCE → WORD [key] → DKZK WNQDKEBS" title="Keyword string" rows="6" id="keywordText" class="form-control keyword-cipher" autocomplete="off"></textarea>
+                        <textarea placeholder="Example: TEST SENTENCE → WORD [key] → DKZK WNQDKEBS" title="Keyword encrypt/decrypt string" rows="6" id="keywordText" class="form-control keyword-cipher" autocomplete="off"></textarea>
                     </div>
                     <div class="card-footer py-3">
                         <div class="text-center mb-4 g-0">
