Uniforming titles and buttons

--- a/_includes/partials/ciphers/atbash.liquid
+++ b/_includes/partials/ciphers/atbash.liquid
@@ -28,11 +28,11 @@
                 <div class="card">
                     <span class="card-label visually-hidden">Atbash</span>
                     <div class="card-body text-center">
-                        <textarea placeholder="Example: (A ⇆ Z) (B ⇆ Y)" title="Atbash decode a string" rows="6" id="atbashText" class="form-control atbash-text" autocomplete="off"></textarea>
+                        <textarea placeholder="Example: (A ⇆ Z) (B ⇆ Y)" title="Atbash encrypt a string" rows="6" id="atbashText" class="form-control atbash-text" autocomplete="off"></textarea>
                     </div>
                     <div class="card-footer py-3">
                         <div class="d-flex justify-content-start align-items-center">
-                            <button type="button" class="btn btn-md btn-convrtr" id="atbashDecode" title="Generate">Generate</button>
+                            <button type="button" class="btn btn-md btn-convrtr" id="atbashDecode" title="Encrypt">Encrypt</button>
                             {% include "components/select-copy-dl" %}
                         </div>
                         <hr />
