--- a/_includes/partials/oni/strings.liquid
+++ b/_includes/partials/oni/strings.liquid
@@ -13,17 +13,21 @@
             </a>
             <hr>
             <p class="px-2">
-                 Extracts sequences of printable characters from a string, based on a given number of minimum characters.
+                 Extracts sequences of printable characters from a string, based on a given number of minimum characters. Minimum characters cannot be less than 1.
             </p>
         </div>
         <div class="collapse" id="stringsCollapse">
             <div class="col">
                 <div class="card">
                     <span class="card-label visually-hidden">Extract strings</span>
-                    <div class="card-body text-center">
+                    <div class="card-body text-left">
+                        <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2 data-to-copy active">strings(string, n = 4)</code>
+                        {% comment -%}
                         <textarea placeholder="Example: 4 → 'This is a test' → ['This'], ['test']" title="string to extract" rows="6" id="stringsText" class="form-control strings-cipher" autocomplete="off"></textarea>
+                        {%- endcomment -%}
                     </div>
                     <div class="card-footer py-3">
+                    {% comment -%}
                         <div class="text-center mb-4 g-0">
                             <div class="row row-cols-2 g-md-0 gx-0 gy-2">
                                 <div class="col col-12 col-md-auto">
@@ -40,6 +44,17 @@
                         </div>
                         <hr />
                         <div id="stringsResults" class="data-to-copy active"></div>
+                    {%- endcomment -%}
+                        <div class="text-center mb-4 g-0">
+                            <div class="row row-cols-2 g-md-0 gx-0 gy-2">
+                                <div class="col col-12 col-md-auto">
+                                </div>
+                                <div class="col d-flex flex-fill justify-content-end">
+                                    {% include "components/select-copy-dl" %}
+                                </div>
+                            </div>
+                        </div>
+                        <hr />
                     </div>
                 </div>
             </div>
