--- a/_includes/partials/ciphers/rail.liquid
+++ b/_includes/partials/ciphers/rail.liquid
@@ -46,7 +46,7 @@
                             <div class="row row-cols-2 g-md-0 gx-0 gy-2">
                                 <div class="col col-12 col-md-auto">
                                     <div class="input-group w-auto">
-                                        <label class="input-group-text" id="basic-addon1" for="railAmount"><span class="visually-hidden">Number of </span>Rails</label>
+                                        <label class="input-group-text" id="railAmountLabel" for="railAmount"><span class="visually-hidden">Number of </span>Rails</label>
                                         <input type="number" class="form-control" id="railAmount" autocomplete="off" min="2" value="2">
                                         <button class="btn btn-convrtr" type="button" id="railEncrypt">Encrypt</button>
                                         <button class="btn btn-outline-convrtr" type="button" id="railDecrypt">Decrypt</button>
