--- a/_includes/partials/ciphers/vigenere.liquid
+++ b/_includes/partials/ciphers/vigenere.liquid
@@ -41,7 +41,7 @@
                             <div class="row row-cols-2 g-md-0 gx-0 gy-2">
                                 <div class="col col-12 col-md-auto">
                                     <div class="input-group w-auto">
-                                        <label class="input-group-text" id="basic-addon1" for="vigenereKey"><span class="visually-hidden">Vigenère </span>Key</label>
+                                        <label class="input-group-text" id="vigenereKeyLabel" for="vigenereKey"><span class="visually-hidden">Vigenère </span>Key</label>
                                         <input type="text" class="form-control" id="vigenereKey" autocomplete="off">
                                         <button class="btn btn-convrtr" type="button" id="vigenereEncrypt">Encrypt</button>
                                         <button class="btn btn-outline-convrtr" type="button" id="vigenereDecrypt">Decrypt</button>
