--- a/_includes/partials/oni/strings.liquid
+++ b/_includes/partials/oni/strings.liquid
@@ -32,7 +32,7 @@
                             <div class="row row-cols-2 g-md-0 gx-0 gy-2">
                                 <div class="col col-12 col-md-auto">
                                     <div class="input-group w-auto">
-                                        <label class="input-group-text" id="basic-addon1" for="stringsKey">Min<span class="visually-hidden">imum</span>&nbsp;Chars</label>
+                                        <label class="input-group-text" id="stringsKeyLabel" for="stringsKey">Min<span class="visually-hidden">imum</span>&nbsp;Chars</label>
                                         <input type="number" class="form-control" id="stringsKey" autocomplete="off" min="1" value="1">
                                         <button class="btn btn-convrtr" type="button" id="stringsDecode">Generate</button>
                                     </div>
