--- a/_includes/partials/ciphers/beaufort.liquid
+++ b/_includes/partials/ciphers/beaufort.liquid
@@ -41,7 +41,7 @@
                             <div class="row row-cols-2 g-md-0 gx-0 gy-2">
                                 <div class="col col-12 col-md-auto">
                                     <div class="input-group w-auto">
-                                        <label class="input-group-text" id="basic-addon1" for="beaufortKey"><span class="visually-hidden">Beaufort </span>Key</label>
+                                        <label class="input-group-text" id="beaufortKeyLabel" for="beaufortKey"><span class="visually-hidden">Beaufort </span>Key</label>
                                         <input type="text" class="form-control" id="beaufortKey" autocomplete="off">
                                         <button class="btn btn-convrtr" type="button" id="beaufortEncrypt">Encrypt</button>
                                         <button class="btn btn-outline-convrtr" type="button" id="beaufortDecrypt">Decrypt</button>
