--- a/_includes/partials/hex/reversehex.liquid
+++ b/_includes/partials/hex/reversehex.liquid
@@ -32,7 +32,7 @@
                             <div class="row row-cols-2 g-md-0 gx-0 gy-2">
                                 <div class="col col-12 col-md-auto">
                                     <div class="input-group w-auto">
-                                        <label class="input-group-text" for="{{ hexDelimiter }}Delimiter">Delimiter</label>
+                                        <label class="input-group-text" for="{{ hexDelimiter }}Delimiter"><span class="visually-hidden">Hex </span>Delimiter</label>
                                         {% include "components/delimiter" %}
                                         <button type="button" class="btn btn-md btn-convrtr me-2" id="{{ hexDelimiter }}Decode">Reverse</button>
                                     </div>
