Fixing some IDs

--- a/_includes/partials/home/replace.liquid
+++ b/_includes/partials/home/replace.liquid
@@ -30,11 +30,11 @@
                             <div class="row row-cols-2 g-md-0 gx-0 gy-2">
                                 <div class="col col-12 col-lg-auto me-2 mb-2">
                                     <div class="input-group w-auto mb-2">
-                                        <label class="input-group-text" id="replaceValue" for="replaceValue">Old<span class="d-none d-md-block">&nbsp;characters</span></label>
+                                        <label class="input-group-text" for="replaceValue">Old<span class="d-none d-md-block">&nbsp;characters</span></label>
                                         <input type="text" class="form-control" id="replaceValue" autocomplete="off">
                                     </div>
                                     <div class="input-group w-auto">
-                                        <label class="input-group-text" id="basic-addon2" for="replacementValue">New<span class="d-none d-md-block">&nbsp;characters</span></label>
+                                        <label class="input-group-text" id="newCharacters" for="replacementValue">New<span class="d-none d-md-block">&nbsp;characters</span></label>
                                         <input type="text" class="form-control" id="replacementValue" autocomplete="off">
                                         <button class="btn btn-convrtr" type="button" id="replaceDecode">Replace</button>
                                     </div>
