--- a/_includes/partials/ciphers/atbash.liquid
+++ b/_includes/partials/ciphers/atbash.liquid
@@ -13,7 +13,7 @@
             </a>
             <hr>
             <p class="px-2">
-                a simple substitution cipher that takes a string and transforms each letter to its mirror image in the alphabet. For example: 
+                A simple substitution cipher that takes a string and transforms each letter to its mirror image in the alphabet. For example: 
                 <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
                     A ⇆ Z
                 </code>
