--- a/_includes/partials/ciphers/atbash.liquid
+++ b/_includes/partials/ciphers/atbash.liquid
@@ -31,9 +31,27 @@
                         <textarea placeholder="Example: (A ⇆ Z) (B ⇆ Y)" title="Atbash encrypt a string" rows="6" id="atbashText" class="form-control atbash-text" autocomplete="off"></textarea>
                     </div>
                     <div class="card-footer py-3">
-                        <div class="d-flex justify-content-start align-items-center">
-                            <button type="button" class="btn btn-md btn-convrtr" id="atbashDecode" title="Encrypt">Encrypt</button>
-                            {% include "components/select-copy-dl" %}
+                        <div class="text-center mb-4 g-0">
+                            <div class="row row-cols-2 g-md-0 gx-0 gy-2">
+                                <div class="col col-12 col-md-auto">
+                                    <div class="input-group w-auto">
+                                        <button type="button" class="btn btn-md btn-convrtr" id="atbashDecode" title="Encrypt">Encrypt</button>
+                                    </div>
+                                </div>
+                                <div class="col-12 col-md-auto flex-fill">
+                                    <div class="row row-cols-auto g-0">
+                                        <div class="col col-8 col-sm-auto ms-0 mx-md-2 me-auto">
+                                            <div class="form-check form-switch text-start">
+                                                <input class="form-check-input" type="checkbox" role="switch" id="chainAb" aria-checked="false">
+                                                <label class="form-check-label" for="chainAb">Chain <span class="visually-hidden">atbash </span>commands</label>
+                                            </div>
+                                        </div>
+                                        <div class="col d-flex flex-fill justify-content-end">
+                                            {% include "components/select-copy-dl" %}
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <hr />
                         <div id="atbashResults" class="data-to-copy active"></div>
