--- a/_includes/partials/ciphers/chaos.liquid
+++ b/_includes/partials/ciphers/chaos.liquid
@@ -32,12 +32,28 @@
                         <textarea placeholder="Example: HELLO WORLD → WAHQZIUETS" title="Encrypt or decrypt Chaocipher string" rows="6" id="chaosText" class="form-control chaos-text" autocomplete="off"></textarea>
                     </div>
                     <div class="card-footer py-3">
-                        <div class="d-flex justify-content-start align-items-center">
-                            <div class="input-group w-auto">
-                                <button type="button" class="btn btn-convrtr" id="chaosEncrypt" title="Encrypt">Encrypt</button>
-                                <button class="btn btn-outline-convrtr" type="button" id="chaosDecrypt">Decrypt</button>
+                        <div class="text-center mb-4 g-0">
+                            <div class="row row-cols-2 g-md-0 gx-0 gy-2">
+                                <div class="col col-12 col-md-auto">
+                                    <div class="input-group w-auto">
+                                        <button type="button" class="btn btn-convrtr" id="chaosEncrypt" title="Encrypt">Encrypt</button>
+                                        <button class="btn btn-outline-convrtr" type="button" id="chaosDecrypt">Decrypt</button>
+                                    </div>
+                                </div>
+                                <div class="col-12 col-md-auto flex-fill">
+                                    <div class="row row-cols-auto g-0">
+                                        <div class="col col-8 col-sm-auto ms-0 mx-md-2 me-auto">
+                                            <div class="form-check form-switch text-start">
+                                                <input class="form-check-input" type="checkbox" role="switch" id="chainChaos" aria-checked="false">
+                                                <label class="form-check-label" for="chainChaos">Chain <span class="visually-hidden">chaocipher </span>commands</label>
+                                            </div>
+                                        </div>
+                                        <div class="col d-flex flex-fill justify-content-end">
+                                            {% include "components/select-copy-dl" %}
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                            {% include "components/select-copy-dl" %}
                         </div>
                         <hr />
                         <div id="chaosResults" class="data-to-copy active"></div>
