Set hex shift text input to number

--- a/_includes/partials/hex/shift.liquid
+++ b/_includes/partials/hex/shift.liquid
@@ -33,7 +33,7 @@
                                 <div class="col col-12 col-md-auto me-2 mb-2">
                                     <div class="input-group w-auto">
                                         <label class="input-group-text" id="shiftValueLabel" for="shiftValue"><span class="d-none d-md-block">Shift&nbsp;</span>Value</label>
-                                        <input type="text" class="form-control" id="shiftValue" autocomplete="off">
+                                        <input type="number" class="form-control" id="shiftValue" autocomplete="off">
                                         <button class="btn btn-convrtr" type="button" id="shiftDecode">Shift</button>
                                     </div>
                                 </div>
