Additional enforcement on ROT key

--- a/_includes/partials/ciphers/caesar.liquid
+++ b/_includes/partials/ciphers/caesar.liquid
@@ -65,7 +65,7 @@
                                 <div class="col col-12 col-md-auto">
                                     <div class="input-group w-auto">
                                         <label class="input-group-text" id="rot-group" for="rotKey"><span class="visually-hidden">Caesar Cipher </span>Key</label>
-                                        <input type="text" class="form-control" id="rotKey" autocomplete="off">
+                                        <input type="text" class="form-control" id="rotKey" autocomplete="off" pattern="[A-Za-z]*" title="Only letters allowed">
                                     </div>
                                 </div>
                                 <div class="col-12 col-md-auto flex-fill">
