Improved dynamic include support
Only include partials and assets that actually exist - making it easier to set up new sections.
Set fallbacks for routes, removed redundant routes

--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -31,4 +31,9 @@
         {% render "layout/toast" %}
     </body>
 </html>
-{% render "partials/routes/{{ page-id }}" %}
+{% assign dynamicPartialPath = "partials/routes/" | append: page-id | append: ".liquid" %}
+{% if dynamicPartialPath | fileExists %}
+{% render dynamicPartialPath %}
+{% else %}
+{% render "partials/routes/home" %}
+{% endif %}
