Updating IDs and sorting

--- a/_includes/partials/ciphers/caesar.liquid
+++ b/_includes/partials/ciphers/caesar.liquid
@@ -1,4 +1,4 @@
-<section id="rotate" class="section">
+<section id="caesar" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
             <a class="d-flex justify-content-between section-toggle text-decoration-none"
