--- a/_includes/layout/nav.liquid
+++ b/_includes/layout/nav.liquid
@@ -6,7 +6,7 @@
             <span class="d-inline-flex ms-1 me-auto fs-5">{{ link.label }}</span>
         </a>
         <ul class="dropdown-menu{% if page-id ==  link.id %} show{% endif %}">
-            {% assign sortedItems = link.children | sort: 'label' %}
+            {% assign sortedItems = link.children | sort: 'id' %}
             {% for child in sortedItems %}
             <li class="mb-1">
                 <a class="dropdown-item" href="../{% if link.id != 'home'%}{{ link.id }}/{% endif %}#{{ child.id }}">{{ child.label }}</a>
