Better fix for storage clear checks
New function to check if an item exists in an array
Don't count items that don't have a value

--- a/_includes/partials/oni/calendar.liquid
+++ b/_includes/partials/oni/calendar.liquid
@@ -34,6 +34,7 @@
                             </div>
                         </div>
                         <hr />
+                        <div class="data-to-copy active"></div>
                     </div>
                 </div>
             </div>
