--- a/_includes/partials/oni/strings.liquid
+++ b/_includes/partials/oni/strings.liquid
@@ -55,6 +55,7 @@
                             </div>
                         </div>
                         <hr />
+                        <div class="data-to-copy active"></div>
                     </div>
                 </div>
             </div>
