--- a/_includes/partials/oni/unmunge.liquid
+++ b/_includes/partials/oni/unmunge.liquid
@@ -34,6 +34,7 @@
                             </div>
                         </div>
                         <hr />
+                        <div class="data-to-copy active"></div>
                     </div>
                 </div>
             </div>
