--- a/_includes/layout/header.liquid
+++ b/_includes/layout/header.liquid
@@ -14,7 +14,7 @@
                         <a class="btn btn-md btn-link text-light" aria-label="Discord support server" 
                             title="Discord" href="{{ pkg.support }}" title="Discord"
                             data-bs-toggle="tooltip" data-bs-placement="bottom">
-                            <i class="bi bi-discord"></i>
+                            <i class="bi bi-discord" aria-hidden="true" focusable="false"></i>
                             <span class="visually-hidden mx-2" focusable="false" aria-hidden="false">Join the discord</span>
                         </a>
                     </li>
@@ -22,7 +22,7 @@
                         <a class="btn btn-md btn-link text-light" aria-label="Github code repository" 
                             title="Github" href="{{ pkg.repository.site }}" title="Github"
                             data-bs-toggle="tooltip" data-bs-placement="bottom">
-                            <i class="bi bi-github"></i>
+                            <i class="bi bi-github" aria-hidden="true" focusable="false"></i>
                             <span class="visually-hidden mx-2" focusable="false" aria-hidden="false">Github</span>
                         </a>
                     </li>
@@ -31,7 +31,7 @@
                         <button type="button" class="btn btn-md btn-link text-light btn-reset-data" id="resetData" 
                                 aria-label="Clear all data inside textareas" title="Clear data"
                                 data-bs-toggle="tooltip" data-bs-placement="bottom">
-                            <i class="bi bi-recycle"></i>
+                            <i class="bi bi-recycle" aria-hidden="true" focusable="false"></i>
                             <span class="visually-hidden mx-2" focusable="false" aria-hidden="false">Clear all data</span>
                         </button>
                     </li>
@@ -47,25 +47,25 @@
                             <li>
                                 <button type="button" class="dropdown-item d-flex align-items-center" 
                                 data-bs-theme-value="light" aria-pressed="false" data-theme-icon="bi-sun-fill">
-                                    <i class="bi me-2 opacity-50 theme-icon bi-sun-fill"></i>
+                                    <i class="bi me-2 opacity-50 theme-icon bi-sun-fill" aria-hidden="true" focusable="false"></i>
                                     Light
-                                    <i class="bi ms-auto d-none bi-check2"></i>
+                                    <i class="bi ms-auto d-none bi-check2" aria-hidden="true" focusable="false"></i>
                                 </button>
                             </li>
                             <li>
                                 <button type="button" class="dropdown-item d-flex align-items-center" 
                                 data-bs-theme-value="dark" aria-pressed="false" data-theme-icon="bi-moon-stars-fill">
-                                    <i class="bi me-2 opacity-50 theme-icon bi-moon-stars-fill"></i>
+                                    <i class="bi me-2 opacity-50 theme-icon bi-moon-stars-fill" aria-hidden="true" focusable="false"></i>
                                     Dark
-                                    <i class="bi ms-auto d-none bi-check2"></i>
+                                    <i class="bi ms-auto d-none bi-check2" aria-hidden="true" focusable="false"></i>
                                 </button>
                             </li>
                             <li>
                                 <button type="button" class="dropdown-item d-flex align-items-center active" 
                                 data-bs-theme-value="auto" aria-pressed="true" data-theme-icon="bi-circle-half">
-                                    <i class="bi me-2 opacity-50 theme-icon bi-circle-half"></i>
+                                    <i class="bi me-2 opacity-50 theme-icon bi-circle-half" aria-hidden="true" focusable="false"></i>
                                     Auto
-                                    <i class="bi ms-auto d-none bi-check2"></i>
+                                    <i class="bi ms-auto d-none bi-check2" aria-hidden="true" focusable="false"></i>
                                 </button>
                             </li>
                         </ul>
@@ -73,7 +73,8 @@
                 </ul>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#navigation" 
                         aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon" aria-hidden="true" focusable="false"></span>
+                    <span class="visually-hidden">Toggle navigation</span>
                 </button>
             </div>
             <div class="offcanvas offcanvas-end bg-convrtr" id="navigation" tabindex="-1" aria-labelledby="navLabel" data-bs-scroll="true">
@@ -84,12 +85,12 @@
                 <div class="offcanvas-body">
                     {% include 'layout/nav' %}
 
-                    <a class="btn btn-md btn-link text-light text-decoration-none" aria-label="Discord" href="{{ pkg.support }}">
-                        <i class="bi bi-discord"></i>
+                    <a class="btn btn-md btn-link text-light text-decoration-none" aria-label="Join the Discord" href="{{ pkg.support }}">
+                        <i class="bi bi-discord" aria-hidden="true" focusable="false"></i>
                         <span class="mx-2">Join the Discord</span>
                     </a>
-                    <a class="btn btn-md btn-link text-light text-decoration-none" aria-label="Github" href="{{ pkg.repository.site }}">
-                        <i class="bi bi-github"></i>
+                    <a class="btn btn-md btn-link text-light text-decoration-none" aria-label="Convrtr on Github" href="{{ pkg.repository.site }}">
+                        <i class="bi bi-github" aria-hidden="true" focusable="false"></i>
                         <span class="mx-2">Convrtr on Github</span>
                     </a>
                 </div>
