--- a/_includes/partials/home/convrtrs.liquid
+++ b/_includes/partials/home/convrtrs.liquid
@@ -1,11 +1,11 @@
-<section id="convrtrs" class="section">
+<section id="{{ filename }}" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading">
             <a class="d-flex justify-content-between section-toggle text-decoration-none"
-                data-bs-toggle="collapse" href="#convrtrCollapse" role="button" 
-                aria-expanded="true" aria-controls="convrtrCollapse">
+                data-bs-toggle="collapse" href="#{{ filename }}Collapse" role="button" 
+                aria-expanded="true" aria-controls="{{ filename }}Collapse">
                 <h2 class="display-6 w-100 d-flex m-0">
-                    Convrtrs
+                    {{ filename | upperFirst }}
                 </h2>
                 <span class="text-light px-1 border rounded align-self-end toggle-button">
                     <i class="bi bi-arrow-up lh-base"></i>
@@ -38,7 +38,7 @@
                 so you can quickly decode  your puzzle, without having to copy/paste into each different decoder text box.
             </p>
         </div>
-        <div class="collapse" id="convrtrCollapse">
+        <div class="collapse" id="{{ filename }}Collapse">
             <div class="grid">
                 <div class="form-check form-switch text-star g-col-12 mb-3">
                     <input class="form-check-input" type="checkbox" role="switch" id="chainDecoders" aria-checked="false">
@@ -49,7 +49,7 @@
                 {% for tool in convrtrs %}
                 {% if convrtrs.length %}
                 <div class="g-col-12 g-col-md-6 g-col-lg-4 g-col-hd-3 g-col-hd-3 g-col-fhd-3">
-                    <div class="card shadow-sm" id="convrtr-{{ tool.id }}">
+                    <div class="card shadow-sm" id="{{ filename }}-{{ tool.id }}">
                         <div class="card-body">
                             <div class="card-title d-flex align-items-center">
                                 <span class="h6 m-0 text-uppercase">
