--- a/_includes/partials/home/flip.liquid
+++ b/_includes/partials/home/flip.liquid
@@ -1,9 +1,9 @@
-<section id="flip" class="section">
+<section id="{{ filename }}" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
             <a class="d-flex justify-content-between section-toggle text-decoration-none"
-                data-bs-toggle="collapse" href="#flipCollapse" role="button" 
-                aria-expanded="false" aria-controls="flipCollapse">
+                data-bs-toggle="collapse" href="#{{ filename }}Collapse" role="button" 
+                aria-expanded="false" aria-controls="{{ filename }}Collapse">
                 <h2 class="display-6 w-100 d-flex m-0">
                     Flip text
                 </h2>
@@ -16,25 +16,25 @@
                 Flip text upside down - allows you to turn this into ʇɥıs
             </p>
         </div>
-        <div id="flipCollapse" class="collapse">
+        <div id="{{ filename }}Collapse" class="collapse">
             <div class="col">
                 <div class="card">
                     <span class="card-label visually-hidden">Flip Text</span>
                     <div class="card-body text-center">
-                        <label for="flipText" class="visually-hidden">Flip text upside down</label>
-                        <textarea placeholder="Example: TEST → ┴SƎ┴" rows="6" id="flipText" class="form-control flip-text" autocomplete="off"></textarea>
+                        <label for="{{ filename }}Text" class="visually-hidden">Flip text upside down</label>
+                        <textarea placeholder="Example: TEST → ┴SƎ┴" rows="6" id="{{ filename }}Text" class="form-control {{ filename }}-text" autocomplete="off"></textarea>
                     </div>
                     <div class="card-footer py-3">
                         <div class="d-flex justify-content-start align-items-center">
-                            <button type="button" class="btn btn-md btn-convrtr" id="flipDecode" title="Flip text upside down">Flip</button>
+                            <button type="button" class="btn btn-md btn-convrtr" id="{{ filename }}Decode" title="Flip text upside down">{{ filename | upperFirst }}</button>
                             <div class="form-check form-switch mx-2">
-                                <input class="form-check-input" type="checkbox" role="switch" id="flipDirection" aria-checked="false">
-                                <label class="form-check-label" for="flipDirection">Reverse</label>
+                                <input class="form-check-input" type="checkbox" role="switch" id="{{ filename }}Direction" aria-checked="false">
+                                <label class="form-check-label" for="{{ filename }}Direction">Reverse</label>
                             </div>
                             {% include "components/select-copy-dl" %}
                         </div>
                         <hr />
-                        <div id="flipResults" class="data-to-copy active"></div>
+                        <div id="{{ filename }}Results" class="data-to-copy active"></div>
                     </div>
                 </div>
             </div>
