--- a/_includes/partials/home/tools.liquid
+++ b/_includes/partials/home/tools.liquid
@@ -1,9 +1,9 @@
-<section id="tools" class="section">
+<section id="{{ filename }}" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
             <a class="d-flex justify-content-between section-toggle text-decoration-none"
-                data-bs-toggle="collapse" href="#toolsCollapse" role="button" 
-                aria-expanded="false" aria-controls="toolsCollapse">
+                data-bs-toggle="collapse" href="#{{ filename }}Collapse" role="button" 
+                aria-expanded="false" aria-controls="{{ filename }}Collapse">
                 <h2 class="display-6 w-100 d-flex m-0">
                     Tools
                 </h2>
@@ -16,21 +16,21 @@
                 Various operations that can be performed on any kind of text string. By default all changes are based on what you enter into the textarea. By selecting "Chain commands" this shifts to the results section at the bottom, you can then perform actions in succession. E.g. Strip spaces from a string, then select Remove all numbers and both will be performed. 
             </p>
         </div>
-        <div class="collapse" id="toolsCollapse">
+        <div class="collapse" id="{{ filename }}Collapse">
             <div class="col">
                 <div class="card">
                     <span class="card-label visually-hidden">Text tools</span>
                     <div class="card-body text-center">
-                        <label class="visually-hidden" for="toolsTextarea">Text tools</label>
-                        <textarea rows="6" id="toolsTextarea" class="form-control flip-text" autocomplete="off"></textarea>
+                        <label class="visually-hidden" for="{{ filename }}Textarea">Text tools</label>
+                        <textarea rows="6" id="{{ filename }}Textarea" class="form-control flip-text" autocomplete="off"></textarea>
                     </div>
                     <div class="card-footer py-3">
                         <div class="text-center mb-4 g-0">
                             <div class="row row-cols-2 g-md-0 gx-0 gy-2">
                                 <div class="col col-12 col-md-auto">
                                     <div class="input-group w-auto">
-                                        <label class="input-group-text" for="textToolsSelect">Delimiter</label>
-                                        <select class="form-select" id="textToolsSelect" autocomplete="off">
+                                        <label class="input-group-text" for="{{ filename }}Select">Delimiter</label>
+                                        <select class="form-select" id="{{ filename }}Select" autocomplete="off">
                                             <option value="stripspaces" selected="">Strip spaces</option>
                                             <option value="reverse">Reverse</option>
                                             <option value="uppercase">Uppercase</option>
@@ -48,7 +48,7 @@
                                             <option value="urlencode">URL Encode</option>
                                             <option value="urldecode">URL Decode</option>
                                         </select>
-                                        <button class="btn btn-convrtr" type="button" id="toolChange">Run</button>
+                                    <button class="btn btn-convrtr" type="button" id="{{ filename }}Change">Run</button>
                                     </div>
                                 </div>
                                 <div class="col-12 col-md-auto flex-fill">
