Swapping reverse hex to new format

--- a/_includes/partials/hex/reversehex.liquid
+++ b/_includes/partials/hex/reversehex.liquid
@@ -1,10 +1,9 @@
-{% assign hexDelimiter = "reverseHex" %}
-<section id="{{ hexDelimiter }}" class="section">
+<section id="{{ filename }}" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
             <a class="d-flex justify-content-between section-toggle text-decoration-none"
-                data-bs-toggle="collapse" href="#{{ hexDelimiter }}Collapse" role="button" 
-                aria-expanded="false" aria-controls="{{ hexDelimiter }}Collapse">
+                data-bs-toggle="collapse" href="#{{ filename }}Collapse" role="button" 
+                aria-expanded="false" aria-controls="{{ filename }}Collapse">
                 <h2 class="display-6 w-100 d-flex m-0">
                     Reverse hex
                 </h2>
@@ -20,21 +19,21 @@
                 The dropdown allows you to select a delimiter, which is how your hex values are split up and joined together. The default is a space, you can select no delimiter if your hex contains no spaces. 
             </p>
         </div>
-        <div class="collapse" id="{{ hexDelimiter }}Collapse">
+        <div class="collapse" id="{{ filename }}Collapse">
             <div class="col">
                 <div class="card">
                     <span class="card-label visually-hidden">Reverse hex</span>
                     <div class="card-body text-center">
-                        <textarea placeholder="Example: 47 56 37 47" title="Reverse hex nibbles" rows="6" id="{{ hexDelimiter }}Text" class="form-control reverse-hex" autocomplete="off"></textarea>
+                        <textarea placeholder="Example: 47 56 37 47" title="Reverse hex nibbles" rows="6" id="{{ filename }}Text" class="form-control reverse-hex" autocomplete="off"></textarea>
                     </div>
                     <div class="card-footer py-3">
                         <div class="text-center mb-4 g-0">
                             <div class="row row-cols-2 g-md-0 gx-0 gy-2">
                                 <div class="col col-12 col-md-auto">
                                     <div class="input-group w-auto">
-                                        <label class="input-group-text" for="{{ hexDelimiter }}Delimiter"><span class="visually-hidden">Hex </span>Delimiter</label>
+                                        <label class="input-group-text" for="{{ filename }}Delimiter"><span class="visually-hidden">Hex </span>Delimiter</label>
                                         {% include "components/delimiter" %}
-                                        <button type="button" class="btn btn-md btn-convrtr me-2" id="{{ hexDelimiter }}Decode">Reverse</button>
+                                        <button type="button" class="btn btn-md btn-convrtr me-2" id="{{ filename }}Decode">Reverse</button>
                                     </div>
                                 </div>
                                 <div class="col-12 col-md-auto flex-fill">
@@ -53,7 +52,7 @@
                             </div>
                         </div>
                         <hr />
-                        <div id="{{ hexDelimiter }}Results" class="data-to-copy active"></div>
+                        <div id="{{ filename }}Results" class="data-to-copy active"></div>
                     </div>
                 </div>
             </div>
